# control_robot_6dof_ros2_humble

./: .gitignore  setup_environment.sh
install/: local_setup.sh  setup.sh
install/my_arm_robot/share/ament_index/resource_index/package_run_dependencies/: my_arm_robot
install/my_arm_robot/share/my_arm_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_arm_robot/share/my_arm_robot/launch/: display.launch.py
install/my_arm_robot/share/my_arm_robot/meshes/: Link_2.STL  base_link.STL  right_finger.STL
install/my_arm_robot/share/my_arm_robot/rviz/: default.rviz
install/my_arm_robot/share/my_arm_robot/urdf/: robot.csv  robot.urdf
install/my_robot_controllers/include/my_robot_controllers/algo/: types.hpp
install/my_robot_controllers/share/ament_index/resource_index/package_run_dependencies/: my_robot_controllers
install/my_robot_controllers/share/my_robot_controllers/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_robot_controllers/share/my_robot_controllers/cmake/: ament_cmake_export_include_directories-extras.cmake
log/: latest_build
src/: robot_gui.py
src/my_robot_controllers/: CMakeLists.txt  my_robot_controllers_plugins.xml  package.xml
src/my_robot_controllers/config/: controllers.yaml
src/my_robot_controllers/include/my_robot_controllers/: cartesian_velocity_controller.hpp
src/my_robot_controllers/include/my_robot_controllers/algo/: fk_solver.hpp  jacobian_solver.hpp  math_utils.hpp  path_generator.hpp  robot_kinematics.hpp  trajectory_solver.hpp
src/my_robot_controllers/include/my_robot_controllers/shm/: shm_manager.hpp  shm_msgs.hpp
src/my_robot_controllers/src/: cartesian_velocity_controller.cpp
src/my_robot_controllers/src/algo/: fk_solver.cpp  jacobian_solver.cpp  math_utils.cpp  path_generator.cpp  robot_kinematics.cpp  trajectory_solver.cpp
src/my_robot_controllers/src/shm/: shm_manager.cpp
src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware_plugins.xml  package.xml
src/my_robot_hardware/include/my_robot_hardware/: protocol.hpp  robot_system.hpp
src/my_robot_hardware/src/: robot_system.cpp
src/robot/: CMakeLists.txt
src/robot/launch/: robot_bringup.launch.py
src/robot/meshes/: Base_Gap.STL  Gap_base.STL  Gap_motor.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  base_link.STL  finger_left.STL  finger_right.STL  gripper_left.STL  gripper_right.STL  left_finger.STL
src/robot/rviz/: default.rviz
src/robot/urdf/: robot.urdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/robot_gui/: CMakeLists.txt  config.py  main.py  package.xml  sequence_manager.py  shm_manager.py
src/robot_gui/tabs/: control_tabs.py  data_position.json  joint_tab.py  monitor_panel.py  pose_tab.py  sequence_tab.py
src/simple_kinematics_lib/: CMakeLists.txt  package.xml
src/simple_kinematics_lib/include/simple_kinematics_lib/: chain.hpp  kinematics_core.hpp  types.hpp
src/simple_kinematics_lib/src/: kinematics_core.cpp  urdf_parser.cpp
src/simple_trajectory_lib/: CMakeLists.txt  package.xml
src/simple_trajectory_lib/include/simple_trajectory_lib/: trajectory_generator.hpp
src/simple_trajectory_lib/src/: trajectory_generator.cpp
src/test/: run_test.sh  view_usb_data.py
