<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_controllers</name>
  <version>0.0.1</version>
  <description>Controller using Custom Libs and Internal SHM</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>libeigen-dev</depend>

  <!-- THƯ VIỆN MỚI -->
  <depend>simple_kinematics_lib</depend>
  <depend>simple_trajectory_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>